--- a/meson.build
+++ b/meson.build
@@ -293,7 +293,7 @@ subdir('shell')
 subdir('search-provider')
 
 if get_option('tests')
-  subdir('tests')
+#  subdir('tests')
 endif
 
 if get_option('documentation')
