info-overview: Port to GTK4
 - Remove visible=True properties from the UI file
 - Use GtkPicture for the OS logo
 - Drop gtk_dialog_run()
 - Port gnome-control-center-print-renderer to GTK4
   by using GdkSurface to create the GL context

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -9,7 +9,7 @@ panels = [
 #  'default-apps',
 #  'diagnostics',
 #  'display',
-#  'info-overview',
+  'info-overview',
 #  'keyboard',
 #  'location',
 #  'lock',
