notifications: Port to GTK4
This one was relatively easy, since most of the brokenness came
from using deprecated properties that can just be dropped, and
packaging that can also just be dropped.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -16,7 +16,7 @@ panels = [
 #  'microphone',
 #  'mouse',
 #  'multitasking',
-#  'notifications',
+  'notifications',
 #  'online-accounts',
 #  'power',
 #  'printers',
