camera: Port to GTK4

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -3,7 +3,7 @@ subdir('common')
 panels = [
 #  'applications',
 #  'background',
-#  'camera',
+  'camera',
 #  'color',
 #  'datetime',
 #  'default-apps',
