sound: Port to GTK4

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -24,7 +24,7 @@ panels = [
 #  'removable-media',
 #  'search',
 #  'sharing',
-#  'sound',
+  'sound',
 #  'universal-access',
 #  'usage',
 #  'user-accounts',
