universal-access: Port to GTK4
This was quite a huge port, but fortunately it mostly involved
removing tons of deprecated widgets (without replacement; just
drop them) and adjusting packing properties.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -25,7 +25,7 @@ panels = [
 #  'search',
 #  'sharing',
   'sound',
-#  'universal-access',
+  'universal-access',
 #  'usage',
 #  'user-accounts',
 #  'wwan',
