default-apps: Port to GTK4
An easy one, mostly removing code from the UI file.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -6,7 +6,7 @@ panels = [
   'camera',
 #  'color',
 #  'datetime',
-#  'default-apps',
+  'default-apps',
 #  'diagnostics',
 #  'display',
   'info-overview',
