removable-media: Port to GTK4
A pretty boring, regular port again. No new challenges here.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -21,7 +21,7 @@ panels = [
 #  'power',
 #  'printers',
 #  'region',
-#  'removable-media',
+  'removable-media',
 #  'search',
 #  'sharing',
   'sound',
