search: Port to GTK4
This one was the first panel ported that used Drag n' Drop, and
we can see how much of an improvement GTK4 is compared to GTK3
when handling DnD.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -22,7 +22,7 @@ panels = [
 #  'printers',
 #  'region',
   'removable-media',
-#  'search',
+  'search',
 #  'sharing',
   'sound',
   'universal-access',
