location: Port to GTK4
An almost trivial port too.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -11,7 +11,7 @@ panels = [
 #  'display',
   'info-overview',
 #  'keyboard',
-#  'location',
+  'location',
 #  'lock',
 #  'microphone',
 #  'mouse',
