lock: Port to GTK4
This one was even more trivial than the previous one!

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -12,7 +12,7 @@ panels = [
   'info-overview',
 #  'keyboard',
   'location',
-#  'lock',
+  'lock',
 #  'microphone',
 #  'mouse',
 #  'multitasking',
