microphone: Port to GTK4

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -13,7 +13,7 @@ panels = [
 #  'keyboard',
   'location',
   'lock',
-#  'microphone',
+  'microphone',
 #  'mouse',
 #  'multitasking',
   'notifications',
