multitasking: Port to GTK4

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -15,7 +15,7 @@ panels = [
   'lock',
   'microphone',
 #  'mouse',
-#  'multitasking',
+  'multitasking',
   'notifications',
 #  'online-accounts',
   'power',
