mouse: Port to GTK4
This one is an interesting case. It was easier to simply switch
to AdwPreferencesPage than actually port all the GtkFrames in
there.

In addition to that, the mouse test page now uses a GtkPicture
instead of a GtkImage, and the GtkDrawingArea API changes are
reflected in the code.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -14,7 +14,7 @@ panels = [
   'location',
   'lock',
   'microphone',
-#  'mouse',
+  'mouse',
   'multitasking',
   'notifications',
 #  'online-accounts',
