sharing: Port to GTK4
Again, it was easier to just switch some of the code to use
AdwActionRow, and that's what I've done in this commit.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -23,7 +23,7 @@ panels = [
 #  'region',
   'removable-media',
   'search',
-#  'sharing',
+  'sharing',
   'sound',
   'universal-access',
   'usage',
