diagnostics: Port to GTK4
A trivial one.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -7,7 +7,7 @@ panels = [
 #  'color',
 #  'datetime',
   'default-apps',
-#  'diagnostics',
+  'diagnostics',
 #  'display',
   'info-overview',
 #  'keyboard',
