thunderbolt: Port to GTK4
The C code of this panel is just so. damn. good. Porting it was
a breeze.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -38,7 +38,7 @@ endif
 if host_is_linux_not_s390
   panels += [
 #    'bluetooth',
-#    'thunderbolt',
+    'thunderbolt',
 #    'wacom'
   ]
 endif
