bluetooth: Port to GTK4
This needs libgnome-bluetooth-2.0, which was recently merged.

--- a/meson.build
+++ b/meson.build
@@ -223,7 +223,7 @@ config_h.set('HAVE_WWAN', host_is_linux,
 
 if host_is_linux_not_s390
   # gnome-bluetooth
-  gnome_bluetooth_dep = dependency('gnome-bluetooth-1.0', version: '>= 3.18.2')
+  gnome_bluetooth_dep = dependency('gnome-bluetooth-2.0')
 
   libwacom_dep = dependency('libwacom', version: '>= 0.7')
 
