printers: Port to GTK4
Fortunately for us GtkTreeView still operates pretty
much exactly like in GTK3. Other than that, it's a
dense junction of all that we've done so far to port
other panels.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -19,7 +19,7 @@ panels = [
   'notifications',
 #  'online-accounts',
   'power',
-#  'printers',
+  'printers',
 #  'region',
   'removable-media',
   'search',
