keyboard: Port to GTK4
Drop the wm-common insanity.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -10,7 +10,7 @@ panels = [
   'diagnostics',
 #  'display',
   'info-overview',
-#  'keyboard',
+  'keyboard',
   'location',
   'lock',
   'microphone',
