datetime: Port to GTK4
Of particular relevance, the timezone map was massively cleaned up.
It is much more pleasant to use now.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -5,7 +5,7 @@ panels = [
 #  'background',
   'camera',
 #  'color',
-#  'datetime',
+  'datetime',
   'default-apps',
   'diagnostics',
 #  'display',
