region: Port to GTK4
An uneventful port.

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -20,7 +20,7 @@ panels = [
 #  'online-accounts',
   'power',
   'printers',
-#  'region',
+  'region',
   'removable-media',
   'search',
   'sharing',
