display: Port to GTK4

--- a/panels/display/meson.build
+++ b/panels/display/meson.build
@@ -45,7 +45,7 @@ sources += gnome.compile_resources(
 
 deps = common_deps + [
   colord_dep,
-  gnome_desktop_dep,
+  gnome_rr_dep,
   m_dep,
   upower_glib_dep
 ]
