--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ stages:
     # stable branch.
     # Could probably also switch away from rawhide,
     # to stable fedora branch as well.
-    FDO_DISTRIBUTION_TAG: '2021-10-18.0-main'
+    FDO_DISTRIBUTION_TAG: '2021-07-22.0-main'
     FDO_DISTRIBUTION_VERSION: rawhide
 
 #############################################
@@ -87,6 +87,7 @@ build.container.fedora@x86_64:
       gnome-bluetooth-libs-devel
       gnome-desktop3-devel
       gnome-online-accounts-devel
+      gnome-settings-daemon-devel
       grilo-devel
       gsettings-desktop-schemas-devel
       gsound-devel
@@ -114,13 +115,6 @@ build.container.fedora@x86_64:
       xorg-x11-server-Xvfb
       mesa-dri-drivers
       libsecret-devel
-      geocode-glib-devel
-      libgweather-devel
-      lcms2-devel
-      geoclue2-devel
-      libnotify-devel
-      alsa-lib-devel
-      nss-devel
     FDO_DISTRIBUTION_EXEC: |-
       git clone https://gitlab.gnome.org/GNOME/gsettings-desktop-schemas.git && \
         cd gsettings-desktop-schemas && \
@@ -128,20 +122,6 @@ build.container.fedora@x86_64:
         ninja -C _build && \
         ninja -C _build install && \
         cd ..
-
-.Compile and Install gsd: &compile_and_install_gsd
-  git clone https://gitlab.gnome.org/GNOME/gnome-settings-daemon.git &&
-      cd gnome-settings-daemon &&
-      meson . _build --prefix=/usr &&
-      ninja -C _build &&
-      ninja -C _build install &&
-      cd ..
-
-.Install gsd: &install_gsd
-  cd gnome-settings-daemon &&
-      ninja -C _build install &&
-      cd ..
-
 
 ##
 # Stage: Build
@@ -160,7 +140,6 @@ build:
 
   script:
     - dnf -y install gcr-devel
-    - *compile_and_install_gsd
     - *environment_information
     - *build_procedure
 
@@ -194,7 +173,6 @@ test:
 
   script:
     - dnf -y install gcr-devel
-    - *install_gsd
     - *environment_information
     - *run_tests
 
@@ -224,7 +202,6 @@ coverage:
 
   script:
     - dnf -y install gcr-devel
-    - *compile_and_install_gsd
     - *environment_information
     - *build_procedure
     - *run_tests
@@ -341,7 +318,6 @@ flatpak:
   when: manual
   script:
     - dnf -y install gcr-devel
-    - *compile_and_install_gsd
     - *environment_information
     - *build_procedure
     - *run_tests
