wacom: Port to GTK4
Many part of this commit were made by Carlos
Garnacho <carlosg@gnome.org>

WIP wacom: Port to GTK4

Lots of stuff missing and probably broken.

wacom: Port CcDrawingArea input to gestures

We have a handy GtkGestureStylus to use here, which avoids direct
handling of GdkEvents.

wacom: Update current stylus tracking to GtkGestureStylus

Use the ::proximity signal to notice when we are being hovered with
a tablet stylus, and look up the tool from there.

--- a/panels/wacom/meson.build
+++ b/panels/wacom/meson.build
@@ -1,5 +1,5 @@
-deps = wacom_deps + [
-  gnome_desktop_dep,
+deps = common_deps + wacom_deps + [
+  gnome_rr_dep,
   gnome_settings_dep,
   x11_dep,
   xi_dep
