network: Port to GTK4
Boy this was hard.

To ease the pain of porting wireless-security to GTK4, add
a new WsFileChooserButton class that mimics the behavior of
a button that triggers a filechooser, as per the migration
guide suggests.

There were lots of GtkGrids, so the diff is particularly
horrendous. Sorry.

This needs serious testing before landing.

--- a/meson.build
+++ b/meson.build
@@ -210,7 +210,7 @@ if host_is_linux
   # network manager
   network_manager_deps = [
     dependency('libnm', version: '>= 1.24.0'),
-    dependency('libnma', version: '>= 1.8.0'),
+    dependency('libnma-gtk4', version: '>= 1.8.0'),
     dependency('mm-glib', version: '>= 0.7')
   ]
 endif
