--- a/panels/network/wireless-security/meson.build
+++ b/panels/network/wireless-security/meson.build
@@ -14,6 +14,7 @@ nm_applet_headers = [
   'wireless-security.h',
   'ws-leap.h',
   'ws-dynamic-wep.h',
+  'ws-file-chooser-button.h',
   'ws-sae.h',
   'ws-wep-key.h',
   'ws-wpa-eap.h',
@@ -32,6 +33,7 @@ nm_applet_sources = [
   'wireless-security.c',
   'ws-leap.c',
   'ws-dynamic-wep.c',
+  'ws-file-chooser-button.c',
   'ws-sae.c',
   'ws-wep-key.c',
   'ws-wpa-eap.c',
